--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -45,7 +45,6 @@
                     android:layout_height="wrap_content"
                     android:background="@color/light_green"
                     app:layout_collapseMode="pin">
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -61,29 +60,28 @@
                             android:contentDescription="@string/image"
                             android:src="@drawable/ic_logo" />
 
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:orientation="horizontal"
-                            android:gravity="right">
+                            >
+
                             <TextView
                                 android:id="@+id/title"
-                                android:layout_marginRight="88dp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginBottom="32dp"
+                                android:layout_centerHorizontal="true"
                                 android:text="@string/account"
                                 android:textColor="@color/white"
                                 android:textSize="30sp"
                                 android:textStyle="bold" />
-
                             <ImageView
                                 android:layout_width="38dp"
                                 android:layout_height="38dp"
+                                android:layout_alignParentEnd="true"
                                 android:contentDescription="@string/image"
                                 android:src="@drawable/ic__notifications" />
-                        </LinearLayout>
+                        </RelativeLayout>
                     </LinearLayout>
                 </androidx.appcompat.widget.Toolbar>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
