--- a/app/src/main/res/layout/fragment_all_favorite.xml
+++ b/app/src/main/res/layout/fragment_all_favorite.xml
@@ -4,15 +4,58 @@
         <variable
             name="viewModel"
             type="com.example.aposs_buyer.viewmodel.FavoriteViewModel" />
+        <variable
+            name="view"
+            type="android.view.View" />
     </data>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".uicontroler.fragment.AllFavoriteFragment">
 
-        <!-- TODO: Update blank fragment layout -->
+        <LinearLayout
+            android:elevation="1dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="@{viewModel.isProductEmpty? view.VISIBLE: view.GONE}">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nothing in your favorites"
+                android:textColor="@color/disable_pray" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Let find something in our"
+                    android:textColor="@color/disable_pray" />
+
+                <TextView
+                    android:id="@+id/homePage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:text="Home page"
+                    android:textColor="@color/active_button" />
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_favorite_disable" />
+        </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/allItems"
             tools:listitem="@layout/item_favorite"
@@ -26,5 +69,5 @@
 
         </androidx.recyclerview.widget.RecyclerView>
 
-    </LinearLayout>
+    </RelativeLayout>
 </layout>
