--- a/app/src/main/res/layout/fragment_available_favorite.xml
+++ b/app/src/main/res/layout/fragment_available_favorite.xml
@@ -1,30 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <data>
+
         <variable
             name="viewModel"
             type="com.example.aposs_buyer.viewmodel.FavoriteViewModel" />
+
+        <variable
+            name="view"
+            type="android.view.View" />
     </data>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".uicontroler.fragment.AllFavoriteFragment">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:elevation="1dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="@{viewModel.isAvailableProductEmpty()? view.VISIBLE: view.GONE}">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="None of your favorite items is available"
+                android:textColor="@color/disable_pray" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:text="Find something new here!"
+                android:textColor="@color/active_button" />
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_favorite_disable" />
+        </LinearLayout>
         <!-- TODO: Update blank fragment layout -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/allItems"
-            tools:listitem="@layout/item_favorite"
             favoriteData="@{viewModel.availableProduct}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="2"
             tools:itemCount="10"
-            android:clipToPadding="false"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            tools:listitem="@layout/item_favorite">
 
         </androidx.recyclerview.widget.RecyclerView>
 
-    </LinearLayout>
+    </RelativeLayout>
 </layout>
