--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -144,7 +144,7 @@
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -153,17 +153,20 @@
                 <com.google.android.material.tabs.TabLayout
                     android:id="@+id/tab"
                     android:layout_width="match_parent"
+                    android:layout_alignParentTop="true"
                     android:layout_height="wrap_content"
                     android:background="@color/back_ground"
                     android:textSize="16sp"
                     app:tabGravity="fill"
                     app:tabSelectedTextColor="@color/dark_pray"
                     app:tabTextColor="@color/disable_pray" />
-                
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewPager"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </LinearLayout>
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/tab"
+                   />
+
+            </RelativeLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
