--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_main"
     app:startDestination="@id/homeFragment">
 
     <fragment
+        tools:layout="@layout/fragment_home"
         android:id="@+id/homeFragment"
         android:name="com.example.aposs_buyer.uicontroler.fragment.HomeFragment"
         android:label="HomeFragment" />
     <fragment
+        tools:layout="@layout/fragment_favorite"
         android:id="@+id/favoriteFragment"
         android:name="com.example.aposs_buyer.uicontroler.fragment.FavoriteFragment"
         android:label="FavoriteFragment" />
     <fragment
+        tools:layout="@layout/fragment_cart"
         android:id="@+id/cartFragment"
         android:name="com.example.aposs_buyer.uicontroler.fragment.CartFragment"
         android:label="CartFragment" />
     <fragment
+        tools:layout="@layout/fragment_message"
         android:id="@+id/messageFragment"
         android:name="com.example.aposs_buyer.uicontroler.fragment.MessageFragment"
         android:label="MessageFragment" />
     <fragment
+        tools:layout="@layout/fragment_person"
         android:id="@+id/personFragment"
         android:name="com.example.aposs_buyer.uicontroler.fragment.PersonFragment"
         android:label="PersonFragment" />
