--- a/app/src/main/res/layout/fragment_detail_product.xml
+++ b/app/src/main/res/layout/fragment_detail_product.xml
@@ -18,20 +18,24 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.Toolbar
-                android:elevation="8dp"
+                android:elevation="0dp"
                 android:background="@color/white"
                 android:layout_width="match_parent"
-                android:layout_height="70dp">
+                android:layout_height="70dp"
+                >
                 <RelativeLayout
+                    android:layout_marginHorizontal="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
                     <ImageView
-                        android:contentDescription="@string/image"
-                        android:layout_centerVertical="true"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_baseline_arrow_back_24"
+                        android:id="@+id/back"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:contentDescription="@string/image"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_baseline_arrow_back_24" />
                     <ImageView
                         android:contentDescription="@string/image"
                         android:layout_centerVertical="true"
@@ -42,7 +46,6 @@
                         android:layout_height="wrap_content"/>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_marginEnd="20dp"
                         android:layout_centerVertical="true"
                         android:layout_alignParentEnd="true"
                         android:layout_width="27dp"
