Done basic loader

--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -160,12 +160,12 @@
                     app:tabGravity="fill"
                     app:tabSelectedTextColor="@color/dark_pray"
                     app:tabTextColor="@color/disable_pray" />
+
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewPager"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_below="@+id/tab"
-                   />
+                    android:layout_below="@+id/tab" />
 
             </RelativeLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
