--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -1,101 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <data>
+
         <variable
             name="cartItem"
             type="com.example.aposs_buyer.model.CartItem" />
+
         <variable
             name="viewModel"
             type="com.example.aposs_buyer.viewmodel.CartViewModel" />
     </data>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="124dp"
-    android:background="@drawable/bg_cart_item"
-    android:elevation="8dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginHorizontal="6dp"
-    android:layout_marginBottom="10dp"
-    android:orientation="horizontal">
-<ImageView
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    image="@{cartItem.image.imageUri}"
-    android:layout_marginHorizontal="10dp"
-    android:layout_marginVertical="10dp"/>
-    <LinearLayout
-        android:layout_marginTop="10dp"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@{cartItem.name}"
-        android:textSize="12dp"
-        android:textStyle="bold"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{cartItem.property}"
-            android:textSize="12dp"
-            android:textStyle="bold"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14dp"
-            android:text="@{cartItem.priceFormat}"
-            android:textStyle="bold"
-            android:textColor="@color/active_button"/>
+        android:layout_height="124dp"
+        android:layout_marginHorizontal="6dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/bg_cart_item"
+        android:elevation="8dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            image="@{cartItem.image.imageUri}"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="10dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="4dp">
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Amount: "
+                android:text="@{cartItem.name}"
                 android:textSize="12dp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{cartItem.property}"
+                android:textSize="12dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{cartItem.priceFormat}"
+                android:textColor="@color/active_button"
+                android:textSize="14dp"
+                android:textStyle="bold" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right"
-                android:paddingRight="10dp">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_adding_amount"
-                android:orientation="horizontal"
-                android:paddingVertical="4dp"
-                tools:ignore="RtlHardcoded">
-                <ImageView
-                    android:id="@+id/img_minus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
-                    android:src="@drawable/ic_minus" />
+                android:paddingVertical="4dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:text="@{String.valueOf(cartItem.amount)}"
-                    android:textSize="16dp"/>
+                    android:layout_gravity="center"
+                    android:text="Amount: "
+                    android:textSize="12dp"
+                    android:textStyle="bold" />
 
-                <ImageView
-                    android:id="@+id/img_plus"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
-                    android:src="@drawable/ic_plus" />
-            </LinearLayout>
-        </LinearLayout>
-        </LinearLayout>
+                    android:gravity="right"
+                    android:paddingRight="10dp">
 
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_adding_amount"
+                        android:orientation="horizontal"
+                        android:paddingVertical="4dp"
+                        tools:ignore="RtlHardcoded">
+
+                        <ImageView
+                            android:id="@+id/img_minus"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="15dp"
+                            android:src="@drawable/ic_minus" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="10dp"
+                            android:text="@{String.valueOf(cartItem.amount)}"
+                            android:textSize="16dp" />
+
+                        <ImageView
+                            android:id="@+id/img_plus"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="15dp"
+                            android:src="@drawable/ic_plus" />
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
 </layout>
