--- a/app/src/main/res/layout/item_string_property.xml
+++ b/app/src/main/res/layout/item_string_property.xml
@@ -9,7 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:paddingVertical="5dp"
-        android:paddingRight="5dp"
+        android:paddingStart="0dp"
+        android:paddingEnd="5dp"
         xmlns:app="http://schemas.android.com/apk/res-auto">
         <ToggleButton
             android:id="@+id/propertyValue"
@@ -27,7 +28,6 @@
             android:gravity="center"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </ToggleButton>
+            android:layout_height="wrap_content"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
