--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -9,7 +9,7 @@
     tools:context=".uicontroler.activity.UserDetailActivity">
     <fragment
         app:defaultNavHost= "true"
-        android:id="@+id/navDetail"
+        android:id="@+id/navUserDetail"
         android:name="androidx.navigation.fragment.NavHostFragment"
         app:navGraph ="@navigation/navigation_user_detail"
         android:layout_width="match_parent"
