Done full detail

--- a/app/src/main/res/layout/fragment_detail_product.xml
+++ b/app/src/main/res/layout/fragment_detail_product.xml
@@ -345,6 +345,104 @@
                             android:textColor="@color/black"
                             android:textStyle="normal" />
                     </LinearLayout>
+                    <LinearLayout
+                        android:elevation="2dp"
+                        android:gravity="center_vertical"
+                        android:layout_marginTop="-10dp"
+                        android:background="@color/light_green"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp">
+                        <TextView
+                            android:textStyle="bold"
+                            android:textColor="@color/white"
+                            android:layout_marginStart="20dp"
+                            android:textAllCaps="true"
+                            android:text="@string/rating"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                        <TextView
+                            android:textColor="@color/dark_pray"
+                            android:layout_marginStart="10dp"
+                            android:text="@string/rating_sample"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                        <ImageView
+                            android:contentDescription="@string/app_name"
+                            android:layout_marginStart="4dp"
+                            android:src="@drawable/ic_yellow_rate"
+                            android:layout_width="16sp"
+                            android:layout_height="16sp"/>
+                        <TextView
+                            android:layout_marginStart="2dp"
+                            android:layout_marginEnd="20dp"
+                            android:textColor="@color/dark_pray"
+                            android:text="@string/reviews"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:gravity="center_horizontal"
+                        android:background="@drawable/bg_detail_component"
+                        android:layout_marginTop="-13dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="360dp">
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/ratings"
+                            ratings="@{viewModel.selectedProductRating}"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:itemCount="3"
+                            tools:listitem="@layout/item_rating"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginHorizontal="20dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="280dp"/>
+                        <LinearLayout
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal"
+                            android:layout_marginTop="10dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:layout_marginBottom="1dp"
+                                android:textColor="@color/red"
+                                android:text="@string/show_all"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                            <ImageView
+                                android:src="@drawable/ic_red_right"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:elevation="2dp"
+                        android:gravity="center_vertical"
+                        android:layout_marginTop="-15dp"
+                        android:background="@color/light_green"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp">
+                        <TextView
+                            android:layout_marginEnd="50dp"
+                            android:textStyle="bold"
+                            android:textColor="@color/white"
+                            android:layout_marginStart="20dp"
+                            android:textAllCaps="true"
+                            android:text="@string/the_same_kind"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    </LinearLayout>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/sameKindProduct"
+                        productData="@{viewModel.sameKindProducts}"
+                        tools:itemCount="2"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        android:orientation="horizontal"
+                        tools:listitem="@layout/item_product"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
 
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
