--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -13,7 +13,7 @@
         android:background="@color/back_ground">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="210dp"
             android:layout_margin="8dp"
             android:padding="5dp"
